--- a/Index.html
+++ b/Index.html
@@ -7,5 +7,13 @@
 
 <body>
 	<h1>Leonard Family Scholarship!</h1>
+	<hr>
+		<h2>How We Plan to Fund?</h2>
+	<p>Methods to <b title="PAY" style="color: red">PAY NOW!</b></p>
+	<img src="images/scholarshipdonationslide.png" alt="Chart of Options">	
+	
+	<p>Winners will be announced at the <i title="June 2023 Family Reunion" style="color: red">June 2023 Family Reunion</i></p>
+	
+	<h3>Donate in Honor of Your Ancestors!</h3>
 </body>
 </html>
