Updated with three pics

--- a/Index.html
+++ b/Index.html
@@ -8,12 +8,16 @@
 <body>
 	<h1>Leonard Family Scholarship!</h1>
 	<hr>
-		<h2>How We Plan to Fund?</h2>
+		<h2>The Leonard Family has initiated an annual scholarship for our high school graduates seeking higher education.</h2>
+		<h3>How We Plan to Fund?</h3>
 	<p>Methods to <b title="PAY" style="color: red">PAY NOW!</b></p>
 	<img src="images/scholarshipdonationslide.png" alt="Chart of Options">	
 	
 	<p>Winners will be announced at the <i title="June 2023 Family Reunion" style="color: red">June 2023 Family Reunion</i></p>
 	
-	<h3>Donate in Honor of Your Ancestors!</h3>
+	<h4>Donate in Honor of Your Ancestors!</h4>
+	
+	<p>Be a Part of the Solution</p> <img src="images/scholarshipimage1.png" alt="Leonard Family">
+	<img src="images/schelarshipawardimage2.png" alt="Scholarships Available">
 </body>
 </html>
