Updated 3 with pics

--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,7 @@
 	
 	<h4>Donate in Honor of Your Ancestors!</h4>
 	
-	<p>Be a Part of the Solution</p> <img src="images/scholarshipimage1.png" alt="Leonard Family"> <img src="images/scholarshipawardimage2.png" alt="Scholarships Available">
+	<p>Be a Part of the Solution!</p> <img src="images/scholarshipimage1.png" alt="Leonard Family"> 
+	<p>Not a Part of the Problem!</p> <img src="images/scholarshipawardimage2.png" alt="Scholarships Available">
 </body>
 </html>
