Updated with small i

--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<h1>Leonard Family Scholarship!</h1>
+	<h1>Leonard Family Scholarship!!!</h1>
 	<hr>
 		<h2>The Leonard Family has initiated an annual scholarship for our high school graduates seeking higher education.</h2>
 		<h3>How We Plan to Fund?</h3>
